--- a/zing/acquire_data.ipynb
+++ b/zing/acquire_data.ipynb
@@ -714,21 +714,21 @@
     "        cursor.execute(\"select database();\")\n",
     "        record = cursor.fetchone()\n",
     "        print(\"You're connected to database: \", record)\n",
-    "        # cursor.execute('DROP TABLE IF EXISTS equity;')\n",
-    "        # print('Creating table....')\n",
+    "        cursor.execute('DROP TABLE IF EXISTS equity;')\n",
+    "        print('Creating table....')\n",
     "\n",
-    "        # cursor.execute(\"CREATE TABLE equity(symbol varchar(255), Name_of_company varchar(255),Series varchar(10), Date_of_listing varchar(255), paid_up_value varchar(255), market_lot varchar(255), isin_number varchar(255), face_value varchar(2))\")\n",
-    "        # print(\"EQUITY Table is created....\")\n",
+    "        cursor.execute(\"CREATE TABLE equity(symbol varchar(255), Name_of_company varchar(255),Series varchar(10), Date_of_listing varchar(255), paid_up_value varchar(255), market_lot varchar(255), isin_number varchar(255), face_value varchar(2))\")\n",
+    "        print(\"EQUITY Table is created....\")\n",
     "\n",
     "        cursor.execute(\"CREATE TABLE bhavcopy(symbol varchar(255), Series varchar(255), open varchar(20), high varchar(20), low varchar(20), close varchar(20), last varchar(20), prevclose varchar(20), tottrdqty varchar(20), tottrdval varchar(20), timestamp varchar(255), total_trades varchar(20), isin varchar(255));\")\n",
     "        print(\"BHAVCOPY Table created....\")\n",
     "        \n",
-    "        # for i,row in equity.iterrows():\n",
+    "        for i,row in equity.iterrows():\n",
     "             \n",
-    "        #     sql = \"INSERT INTO stock_price.equity VALUES (%s,%s,%s,%s,%s,%s,%s,%s)\"\n",
-    "        #     cursor.execute(sql, tuple(row))\n",
+    "            sql = \"INSERT INTO stock_price.equity VALUES (%s,%s,%s,%s,%s,%s,%s,%s)\"\n",
+    "            cursor.execute(sql, tuple(row))\n",
     "            \n",
-    "        #     conn.commit()\n",
+    "            conn.commit()\n",
     "\n",
     "        for i,row in bhavcopy.iterrows():\n",
     "            sql = \"INSERT INTO stock_price.bhavcopy VALUES (%s,%s,%s,%s,%s,%s,%s,%s,%s,%s,%s,%s,%s);\"\n",
